@@ -41,7 +41,7 @@ Edit <dtml-var meta_type> properties here.
     <dtml-var "field.meta_type">
     </div></td>
     <td align="left" valign="top">
-    <dtml-var "field.get_value('description')">
+    <div class="form-element"><dtml-var "field.get_value('description')"></div>
     </td>
   </tr>
 </dtml-let>
